# open5gs_e2e_edge

./: .gitignore  README.md
lib/proto/: types.c
lib/sbi/: conv.h  message.c  message.h
misc/db/: batch_add_users.py  batch_add_users.sh
src/amf/: context.c  gmm-handler.c  ngap-handler.c  nnssf-build.c  npcf-build.c
src/smf/: binding.c  binding.h  namf-handler.c  npcf-handler.c
src/udm/: nudr-build.c  nudr-handler.c  udm-sm.c
src/upf/: context.h  n4-handler.c  pfcp-path.c  pfcp-sm.c
subprojects/prometheus-client-c/: CMakeLists.txt  meson.build
